# invTwilightFree

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md
.claude/: settings.json
R/: TwilightFree.R  TwilightFreeGrid.R  cleanLight.R  data.R  drawTracks.R  eraseLight.R  extendr-wrappers.R  findZenith.R  latentClass.R  makeGrid.R  missingPlot.R  sensor_prior.R  sensor_rules.R  sensor_sources.R  sensor_terms.R  smc.R  zenithPlot.R
data/: sim_equinox.rda  sim_long.rda  sim_polar.rda  sim_short.rda
data-raw/: simulate_tracks.R
inst/: CITATION
man/: TwilightFree.Rd  TwilightFreeGrid.Rd  TwilightFreeSMC.Rd  bathy_source.Rd  build_aux_matrix.Rd  ceiling_rule.Rd  custom_rule.Rd  drawTracks.Rd  eraseLight.Rd  eval_logpk_grid.Rd  findZenith.Rd  floor_rule.Rd  function_source.Rd  gaussian_rule.Rd  hemisphere_prior.Rd  identity_rule.Rd  interpolate_max_light.Rd  latentClass.Rd  light_log_likelihood.Rd  location_term.Rd  makeGrid.Rd  mask_rule.Rd  max_light_delta.Rd  missingPlot.Rd  prior_raster.Rd  raster_source.Rd  run_particle_filter.Rd  sea_mask_source.Rd  sim_equinox.Rd  sim_long.Rd  sim_polar.Rd  sim_short.Rd  solar_zenith.Rd  sst_source.Rd  student_rule.Rd  zenithPlot.Rd
scratch/: benchmark_flightr_input.csv  benchmark_flightr_input_ideal.csv  cal_tune_code.R  cal_tune_code_fixed.R  cal_tune_code_v2.R  cal_tune_code_v2_fixed.R  cal_tune_code_v3.R  cal_tune_code_v3_fixed.R  check_alan.R  check_dim.R  check_light.R  check_solar_conditions.R  check_twl.R  check_twl_filter.R  fix_lib.R  (+42 more)
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: lib.rs
(+45 files in other folders)
